--- a/PhoneInfo-Hunter/index.html
+++ b/PhoneInfo-Hunter/index.html
@@ -20,7 +20,12 @@
                  </div>
         </section>
        <!-- show all phonelist -->
+
         <section class ="mt-10">
+            <div class="text-center my-10" id="load-spinner">
+                <span class="loading loading-spinner text-accent"></span>
+            </div>
+            
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
             </div>
 
