--- a/PhoneInfo-Hunter/index.html
+++ b/PhoneInfo-Hunter/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="mt-4 hidden " id="showAll-container">
-                <button onclick=" Handlersearch()" class="btn btn-accent text-white ">show more</button>
+                <button onclick="showAll()" class="btn btn-accent text-white ">show more</button>
             </div>
         </section>
     </main>
